logging out users

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,11 +55,8 @@
     </nav>
     <header>
       <h1>
-        Net Ninja OAUTH Tut's
+        Welcome to your profile <%= user.username %>
       </h1>
-      <h2>
-        HomePage
-      </h2>
     </header>
     <main>
       <p>
